# EventSimulation

./: CMakeLists.txt  README.md
src/: EventSimulation.c  EventSimulation.cpp  NetEventSimulation.cpp  SerialPortEventReceive.cpp  SerialPortEventSimulation.cpp
src/SerialPortClient/: SerialPortClient.cpp  SerialPortClient.h
